--- a/dofinale/templates/intro.html
+++ b/dofinale/templates/intro.html
@@ -3,25 +3,21 @@
 
   <!--헤더 인트로-->
   <div class="container d-flex align-items-center justify-content-center text-center h-100">
-    <div class="text-white">
-      <h1 class="mb-3">DoFinale</h1>
-      <h5 class="mb-4">AI 기반 두피 유형 진단 서비스</h5>
-      <a
-        class="btn btn-outline-light btn-lg m-2"
-        href="https://www.youtube.com/watch?v=c9B4TPnak1A"
-        role="button"
-        rel="nofollow"
-        target="_blank"
-        >Start tutorial</a
-      >
-      <a
-        class="btn btn-outline-light btn-lg m-2"
-        href="https://mdbootstrap.com/docs/standard/"
-        target="_blank"
-        role="button"
-        >Download MDB UI KIT</a
-      >
+    <div class="box text-white">
+
+      <div class="title">
+        <span class="block"></span>
+        <h1 class="mb-3">DoFinale<span></span></h1>
+      </div>
+
+      <div class="role">
+        <div class="block"></div>
+        <p class="pt-2 mb-4">AI 기반 두피 유형 진단 서비스</p>
+      </div>
+
     </div>
   </div>
 
+  <!--css-->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/reveal.css') }}" />
 {% endblock %}
