--- a/dofinale/templates/post/post_form.html
+++ b/dofinale/templates/post/post_form.html
@@ -4,7 +4,7 @@
 <!-- 게시물 등록 -->
 <div class="container">
     <h5 class="my-3 border-bottom pb-2">게시물 등록</h5>
-    <form method="post" class="my-3">
+    <form method="post" class="my-3" action="{{ url_for('post.create', board_id=board.id, boards_id=board.id) }}" enctype="multipart/form-data">
         {{ form.csrf_token }}
         {% include "form_errors.html" %}
         <div class="mb-3">
@@ -14,6 +14,10 @@
         <div class="mb-3">
             <label for="content">내용</label>
             <textarea class="form-control" name="content" id="content" rows="10">{{ form.content.data or '' }}</textarea>
+        </div>
+        <div class="mb-3">
+            <label for="img_upload">이미지 업로드</label>
+            <input class="form-control" type="file" id="img_upload" name="file">
         </div>
         <button type="submit" class="btn btn-primary">저장하기</button>
     </form>
