--- a/dofinale/templates/service/scalp_diagnosis.html
+++ b/dofinale/templates/service/scalp_diagnosis.html
@@ -36,31 +36,52 @@
               <p class="text-muted">
                 스마트폰 카메라의 접사 기능을 이용하여
                 선명하게 확대한 두피 이미지를 촬영해주세요!
-                <br><br>
-                아래의 버튼을 클릭하면 두피유형 분석을 도와드릴 AI 챗봇으로 연결됩니다.
               </p>
 
-              <div class="py-4 text-center">
-                <form method="post">
-                  <button type="submit" class="btn btn-primary btn-lg m-2">나의 두피 유형 알아보기</button>
-                </form>
+              <!--촬영 예시-->
+              <div class="row gx-lg-3 align-items-center">
+                <div class="col-lg-4 col-md-8 mb-4 mb-lg-0">
+                    <div class="bg-image hover-overlay shadow-1-strong ripple rounded-5 mb-4" data-mdb-ripple-color="light">
+                        <img src="{{ url_for('static', filename='images/stock/scalp_wrong_take.jpg') }}" class="img-fluid" />
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-4 mb-4 mb-lg-0">
+                    <div class="bg-image hover-overlay ripple rounded-5 mb-4" data-mdb-ripple-color="light">
+                        <img src="{{ url_for('static', filename='images/icons/failed.png') }}" class="img-fluid" />
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-8 mb-4 mb-lg-0">
+                    <div class="bg-image hover-overlay shadow-1-strong ripple rounded-5 mb-4" data-mdb-ripple-color="light">
+                        <img src="{{ url_for('static', filename='images/stock/scalp_right_take.jpg') }}" class="img-fluid" />
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-4 mb-4 mb-lg-0">
+                    <div class="bg-image hover-overlay ripple rounded-5 mb-4" data-mdb-ripple-color="light">
+                        <img src="{{ url_for('static', filename='images/icons/correct.png') }}" class="img-fluid" />
+                    </div>
+                </div>
               </div>
+
+              <div class="py-2">
+                  <form method="post" action="{{ url_for('service.scalp_diagnosis') }}" enctype="multipart/form-data">
+                    <label for="formFile" class="form-label">
+                        이미지를 업로드 후 아래의 버튼을 클릭해주세요.
+                    </label>
+                    <input class="form-control" type="file" id="formFile" name="file"/>
+                      <div class="text-center">
+                    <button type="submit" class="btn btn-primary btn-lg m-2">두피 분석 진행하기</button>
+                          </div>
+                  </form>
+              </div>
+
             </div>
           </div>
         </section>
         <!--Section: Content-->
-        <form method="post" action="{{ url_for('service.scalp_diagnosis') }}" enctype="multipart/form-data">
-            <div class="form-group mx-sm-5 mb-5 my-5" style="margin-right: 10rem!important; margin-left: 10rem!important;">
-              <label for="formFile" class="form-label">
-                  원하는 두피 진단 부위의 근접 촬영 이미지를 올려주시면<br>
-                  <br>AI 챗봇 'Doofy"가 두피 유형을 분석 후<br>
-                  <br>맞춤 제품과 가까운 모발 전문 병원을 추천해드립니다!<br>
-                  <br>▼ 이미지를 업로드하세요. ▼
-              </label>
-              <input class="form-control" type="file" id="formFile" name="file">
-              <button type="submit" class="btn btn-primary my-2">사진 전송</button>
-            </div>
-        </form>
+
       </div>
     </main>
     <!--Main layout-->
