진단결과 페이지 추가, 챗봇 디자인 수정

--- a/dofinale/templates/about.html
+++ b/dofinale/templates/about.html
@@ -16,36 +16,6 @@
 
         <!--Section: Content-->
         <section>
-            <div class="row text-center">
-
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Heading</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
-
-      </div><!-- /.col-lg-4 -->
-
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
-          <div class="vr vr-blurry position-absolute my-0 h-100 d-none d-md-block top-0 end-0"></div>
-      </div><!-- /.col-lg-4 -->
-
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Heading</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
-          <div class="vr vr-blurry position-absolute my-0 h-100 d-none d-md-block top-0 end-0"></div>
-      </div><!-- /.col-lg-4 -->
-    </div>
-
 
           <div class="row align-items-center">
 
@@ -59,27 +29,15 @@
             <!--본문-->
             <div class="col-md-6 gx-5 mb-4">
 
-              <h4><strong>간단한 설문으로 두피 관리 습관 점검</strong></h4>
+              <h4><strong>준비 중입니다.</strong></h4>
               <p class="text-muted">
-                비듬성, 지루성, 염증성, 탈모성 두피 등 현대인의 다양한 두피 질환이
-                건강하지 못한 생활 습관과 잘못된 두피 관리 방법으로 인해 발생합니다.
-                DoFinale는 총 101,207건에 달하는 사용자들의 생활 습관 데이터를 확보하여
-                간단한 자가 문진을 통해 사용자의 두피 질환 여부를 예측하는 AI 서비스를 제공합니다.
+                내용 입력
               </p>
-              <p><strong>어떤 문항을 체크하나요?</strong></p>
+              <p><strong>내용 입력</strong></p>
               <p class="text-muted">
-                샴푸 사용 빈도, 펌 및 염색 주기, 사용 중인 두피 및 모발용 제품 등 두피에 영향을 끼칠 수 있는 생활 습관을
-                종합적으로 체크합니다.
-                <br><br>
-                아래의 버튼을 클릭하면 자가 진단을 도와드릴 AI 챗봇으로 연결됩니다.
+                내용 입력
               </p>
 
-              <!--버튼-->
-              <div class="py-4 text-center">
-                <form method="post">
-                  <button type="submit" class="btn btn-primary btn-lg m-2">챗봇으로 진단 받기</button>
-                </form>
-              </div>
 
             </div>
           </div>
