--- a/dofinale/templates/service/survey_result.html
+++ b/dofinale/templates/service/survey_result.html
@@ -29,15 +29,15 @@
             <!--본문-->
             <div class="col-md-6 gx-5 mb-4">
 
-              <h4><strong>자가 진단 결과 : {{ g.user.ml_result }}</strong></h4>
+              <h4><strong>자가 진단 결과 {{ g.user.ml_result }} 증상이 의심됩니다.</strong></h4>
               <form method="post">
 
               <!-- Submit button -->
-              <div class="text-center">
+
               <button type="submit" class="btn btn-primary btn-lg m-2">
                 <strong>자가 진단 페이지로 돌아가기</strong>
               </button>
-                </div>
+
 
             </form>
 
